Fix height on mobile

--- a/styles/site.css
+++ b/styles/site.css
@@ -13,8 +13,7 @@
   --font-size-6: clamp(2.0273rem, 1.8357rem + 0.7665vw, 2.6022rem);
 
   --font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu,
-    Cantarell, "Helvetica Neue", sans-serif;
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
   --line-height-base: 1.5;
   --line-height-display: 1.2;
@@ -235,8 +234,7 @@ details summary {
 :is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) strong {
   font-weight: bolder;
 }
-:is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6)
-  + :is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) {
+:is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) + :is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) {
   margin-top: 0.5rem;
   margin-bottom: 1em;
 }
@@ -621,13 +619,11 @@ blockquote footer {
   padding: 1.5rem 0;
 }
 
-
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   gap: 1rem;
 }
-
 
 .text-center {
   text-align: center;
@@ -643,28 +639,27 @@ figure {
 }
 figcaption {
   line-height: 1.2;
-  word-break: break-all;
 }
 figure a {
   text-decoration-color: transparent;
+  word-break: break-all;
 }
-
 figure:target {
   background-color: rgb(from var(--color-link) r g b / 5%);
   scroll-margin: 5vh;
 }
+@media (min-width: 500px) {
+  .image {
+    flex-grow: 1;
+    aspect-ratio: 1 / 1;
+    width: 100%;
 
-.image {
-  flex-grow: 1;
-  aspect-ratio: 1 / 1;
-  width: 100%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
-
-
-.monospace {
-
+.image img {
+  min-width: 32px;
+  height: auto;
 }
